--- a/IT Courses mockup/pages/courses.html
+++ b/IT Courses mockup/pages/courses.html
@@ -132,10 +132,10 @@
                     <div class="card col-xl-3 col-lg-4 col-md-6 col-8 course-card">
                         <img src="../images/csharp.jpg" class="card-img-top card-image">
                         <div class="card-body">
-                            <a href="#" class="card-title course-name">Основы .NET</a>
+                            <a href="courses/dotnet.html" class="card-title course-name">Основы .NET</a>
                             <div class="card-text">
-                                <ul>
-                                    <li name='<i class="bi bi-arrow-right-square"></i>'>35 видеолекций</li>
+                                <ul class="course-params">
+                                    <li>35 видеолекций</li>
                                     <li>10 практических заданий</li>
                                     <li>34 часа</li>
                                 </ul>
@@ -146,10 +146,10 @@
                     <div class="card col-xl-3 col-lg-4 col-md-6 col-8 course-card">
                         <img src="../images/js.jpg" class="card-img-top card-image">
                         <div class="card-body">
-                            <a href="#" class="card-title course-name text-center">JavaScript + JQuery</a>
+                            <a href="courses/js.html" class="card-title course-name text-center">Полный курс по JavaScript</a>
                             <div class="card-text">
-                                <ul>
-                                    <li name='<i class="bi bi-arrow-right-square"></i>'>28 видеолекций</li>
+                                <ul class="course-params">
+                                    <li>28 видеолекций</li>
                                     <li>12 практических заданий</li>
                                     <li>30 часов</li>
                                 </ul>
@@ -160,10 +160,10 @@
                     <div class="card col-xl-3 col-lg-4 col-md-6 col-8 course-card">
                         <img src="../images/java.jpg" class="card-img-top card-image">
                         <div class="card-body">
-                            <a href="#" class="card-title course-name text-center">Продвинутый курс Java</a>
+                            <a href="courses/java.html" class="card-title course-name text-center">Java Advanced</a>
                             <div class="card-text">
-                                <ul>
-                                    <li name='<i class="bi bi-arrow-right-square"></i>'>50 видеолекций</li>
+                                <ul class="course-params">
+                                    <li>50 видеолекций</li>
                                     <li>12 практических заданий</li>
                                     <li>48 часов</li>
                                 </ul>
@@ -174,10 +174,10 @@
                     <div class="card col-xl-3 col-lg-4 col-md-6 col-8 course-card">
                         <img src="../images/Mysql.png" class="card-img-top card-image">
                         <div class="card-body">
-                            <a href="#" class="card-title course-name">Введение в MySQL</a>
+                            <a href="courses/mysql.html" class="card-title course-name">Введение в MySQL</a>
                             <div class="card-text">
-                                <ul>
-                                    <li name='<i class="bi bi-arrow-right-square"></i>'>27 видеолекций</li>
+                                <ul class="course-params">
+                                    <li>27 видеолекций</li>
                                     <li>7 практических заданий</li>
                                     <li>21 час</li>
                                 </ul>
@@ -188,10 +188,10 @@
                     <div class="card col-xl-3 col-lg-4 col-md-6 col-8 course-card">
                         <img src="../images/Mongo-db-logo.png" class="card-img-top card-image">
                         <div class="card-body">
-                            <a href="#" class="card-title course-name text-center">MongoDB. SQL vs NoSql</a>
+                            <a href="courses/mongo.html" class="card-title course-name text-center">Основы MongoDB</a>
                             <div class="card-text">
-                                <ul>
-                                    <li name='<i class="bi bi-arrow-right-square"></i>'>25 видеолекций</li>
+                                <ul class="course-params">
+                                    <li>25 видеолекций</li>
                                     <li>11 практических заданий</li>
                                     <li>27 часов</li>
                                 </ul>
@@ -202,10 +202,10 @@
                     <div class="card col-xl-3 col-lg-4 col-md-6 col-8 course-card">
                         <img src="../images/tsql.png" alt="csharp image" class="card-img-top card-image">
                         <div class="card-body">
-                            <a href="#" class="card-title course-name text-center">Microsoft SQL Server и Transact-SQL</a>
+                            <a href="courses/tsql.html" class="card-title course-name text-center">Microsoft SQL Server и Transact-SQL</a>
                             <div class="card-text">
-                                <ul>
-                                    <li name='<i class="bi bi-arrow-right-square"></i>'>48 видеолекций</li>
+                                <ul class="course-params">
+                                    <li>48 видеолекций</li>
                                     <li>17 практических заданий</li>
                                     <li>30 часов</li>
                                 </ul>
