page titles fix

--- a/IT Courses mockup/pages/courses/tsql.html
+++ b/IT Courses mockup/pages/courses/tsql.html
@@ -10,7 +10,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     
-    <title>Курс "Основы .NET"</title>
+    <title>Курс "Microsoft SQL Server и Transact-SQL"</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-md justify-content-between navbar-dark bg-dark fixed-top">
