navigation bar fix

--- a/IT Courses mockup/index.html
+++ b/IT Courses mockup/index.html
@@ -18,7 +18,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         
-        <div class="collapse navbar-collapse ms-3" id="navbarcontent">
+        <div class="collapse navbar-collapse" id="navbarcontent">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a href="pages/courses.html" class="nav-link">Список курсов</a>
@@ -41,7 +41,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid mt-5 pt-4 main-info">
+    <div class="container-fluid main-info">
         <div class="row">
             <div class="col-12 col-md-6 mb-3">
                 <h1>Курсы CodeLearn</h1>
