--- a/IT Courses mockup/pages/about.html
+++ b/IT Courses mockup/pages/about.html
@@ -19,7 +19,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         
-        <div class="collapse navbar-collapse ms-3" id="navbarcontent">
+        <div class="collapse navbar-collapse" id="navbarcontent">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a href="courses.html" class="nav-link">Список курсов</a>
@@ -42,7 +42,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid mt-5 pt-3 about-info">
+    <div class="container-fluid about-info">
         <div class="row justify-content-center">
             <div class="col-lg-6 offset-lg-6 col-10">
                 <p class="mb-0"><span class="brand-name">CodeLearn</span> - образовательная онлайн платформа для обучения всем актуальным на сегодняшний день направлениям в IT.</p>
