--- a/IT Courses mockup/pages/auth.html
+++ b/IT Courses mockup/pages/auth.html
@@ -18,7 +18,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         
-        <div class="collapse navbar-collapse ms-3" id="navbarcontent">
+        <div class="collapse navbar-collapse" id="navbarcontent">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a href="courses.html" class="nav-link">Список курсов</a>
@@ -30,7 +30,7 @@
                     <a href="contact.html" class="nav-link">Контакты</a>
                 </li> 
             </ul>
-            <ul class="navbar-nav ms-auto">
+            <ul class="navbar-nav ms-auto me-3">
                 <li class="nav-item">
                     <a href="reg.html" class="nav-link">Регистрация</a>
                 </li>
@@ -41,7 +41,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid-sm mt-5 pt-3">
+    <div class="container-fluid-sm auth-reg-container">
         <h1 class="text-center mt-3">CodeLearn</h1>
         <p class="text-center">Сделай свой первый шаг в мир IT</p>
         <div class="row justify-content-center">
