--- a/IT Courses mockup/pages/contact.html
+++ b/IT Courses mockup/pages/contact.html
@@ -18,7 +18,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         
-        <div class="collapse navbar-collapse ms-3" id="navbarcontent">
+        <div class="collapse navbar-collapse" id="navbarcontent">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a href="courses.html" class="nav-link">Список курсов</a>
@@ -41,7 +41,7 @@
         </div>
     </nav>
 
-    <div class="container-fluid mt-5 pt-2 contact-info">
+    <div class="container-fluid contact-info">
         <p class="h3 text-center mt-3 mb-4">Появились вопросы? Свяжитесь с нами!</p>
         <div class="row justify-content-around text-center mb-4">
             <div class="col-lg-4 contact-phones">
@@ -74,9 +74,10 @@
             </div>
         </div>
 
-        <div class="row justify-content-center text-center mb-3">
-            <p class="h5 col-11">Наш офис находится по адресу: <strong>г. Харьков, проспект Людвига Свободы, 51Б</strong></p>
-        </div>
+        <p class="h5 text-center mb-4">Наш офис находится по адресу: <strong>г. Харьков, проспект Людвига Свободы, 51Б</strong></p>
+
+        <!-- <div class="row justify-content-center text-center mb-3">
+        </div> -->
         <div class="row text-center justify-content-center">
             <div class="col-12">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1031.2805355665564!2d36.197096688357995!3d50.05993609582538!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x475c900da417725e!2z0J7QsdGJ0LXQttC40YLQuNC1IOKEljgg0KXQsNGA0YzQutC-0LLRgdC60L7Qs9C-INC90LDRhtC40L7QvdCw0LvRjNC90L7Qs9C-INGD0L3QuNCy0LXRgNGB0LjRgtC10YLQsCDRgNCw0LTQuNC-0Y3Qu9C10LrRgtGA0L7QvdC40LrQuA!5e0!3m2!1sru!2sua!4v1613546828521!5m2!1sru!2sua" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
