--- a/IT Courses mockup/pages/courses/mysql.html
+++ b/IT Courses mockup/pages/courses/mysql.html
@@ -20,7 +20,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         
-        <div class="collapse navbar-collapse ms-3" id="navbarcontent">
+        <div class="collapse navbar-collapse" id="navbarcontent">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a href="../courses.html" class="nav-link">Список курсов</a>
