4k resolution styles for course pages

--- a/IT Courses mockup/pages/courses.html
+++ b/IT Courses mockup/pages/courses.html
@@ -61,10 +61,10 @@
                 </select>
             </div>
         
-            <input class="col-lg-3 col-sm-4 col-9 mb-5 ms-auto" type="text" placeholder="Поиск">
+            <input class="col-lg-3 col-sm-4 col-9 mb-5 ms-auto" type="text" placeholder="Поиск" id="search-input">
             
             <div class="col-lg-1 col-sm-2 col-2 mb-5 me-3 search-button">
-                <button class="w-100 btn btn-primary">
+                <button class="w-100 btn btn-primary" id="search-button">
                     <i class="bi bi-search"></i>
                 </button>
             </div>
