--- a/IT Courses mockup/pages/courses/mysql.html
+++ b/IT Courses mockup/pages/courses/mysql.html
@@ -43,16 +43,16 @@
         </div>
     </nav>
 
-    <div class="container-fluid mt-5 pt-4 concrete-course-info">
+    <div class="container-fluid concrete-course-info">
         <div class="row justify-content-around mb-4">
             <div class="col-lg-5 col-md-7 col-9 course-image">
                 <img src="../../images/Mysql.png">
             </div>
             <div class="col-lg-6 row justify-content-between">
                 <div class="row mt-4">
-                    <p class="course-title">
+                    <h2 class="course-title">
                         Введение в MySQL
-                    </p>
+                    </h2>
                 </div>
                 <ul class="course-params row justify-content-around">
                     <li class="col-sm-4">
